# Computer-Vision

./: .gitignore  CMakeLists.txt  README.md
Application/: main.cpp
ComputerVision/: CmakeLists.txt  ComputerVision.sln  vcpkg.json
ComputerVision/ComputerVision/: ComputerVision.aps  ComputerVision.cpp  ComputerVision.h  ComputerVision.rc  ComputerVision.vcxproj  ComputerVision.vcxproj.filters  D3D12HelloTriangle.cpp  D3D12HelloTriangle.h  DxSample.cpp  DxSample.h  DxSampleHelper.h  Resource.h  framework.h
ComputerVision/include/camera/: cameraGrabber.hpp  frameProcessor.hpp
ComputerVision/include/core/: PipelineManager.hpp  PipelineStage.hpp  detector.hpp
ComputerVision/include/stages/: EdgeDetectionStage.hpp
ComputerVision/include/utils/: jsonParser.hpp
ComputerVision/model/: Yolo8nTraining.ipynb
ComputerVision/src/: main.cpp
ComputerVision/src/camera/: cameraGrabber.cpp  frameProcessor.cpp
ComputerVision/src/core/: PipelineManager.cpp  detector.cpp
ComputerVision/src/cuda/: mykernel.cu
ComputerVision/src/stages/: EdgeDetectionStage.cpp
ComputerVision/src/utils/: jsonParser.cpp
MyProject/: CMakeLists.txt  vcpkg.json
MyProject/src/: main.cpp  tensor.hpp
MyProject/src/Leetcode/: leetcode.hpp
MyProject/src/cudaOperations/: cudaOperations.cu
MyProject/src/memoryManagement/: memoryManagement.hpp
MyProject/src/multiThreading/: multiThreading.hpp  multitThreading.hpp
MyProject/test/: test.cpp
test/: test.cpp
